--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,6 @@
 .button-btn {
   @apply p-1 m-2 border-2 border-gray-300 bg-red-300 rounded-2xl px-4 shadow-lg;
 }
+
+
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
